cmake_minimum_required(VERSION 3.12)

set(TEST_NAME TestQuickSortNonrec)
add_executable(${TEST_NAME} quick_sort_nonrec.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestQuickSortEliminate)
add_executable(${TEST_NAME} quick_sort_eliminate.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestTreeSort)
add_executable(${TEST_NAME} tree_sort.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestBucketSort)
add_executable(${TEST_NAME} bucket_sort.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestRadixSort)
add_executable(${TEST_NAME} radix_sort.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestKMergeSort)
add_executable(${TEST_NAME} k_merge_sort.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})

set(TEST_NAME TestBubbleSort)
add_executable(${TEST_NAME} bubble_sort.cpp data_generation.cpp)
target_link_libraries(${TEST_NAME} gtest gtest_main pthread)
target_include_directories(${TEST_NAME} PUBLIC ${GTEST_INCLUDE_DIRS} ${MAIN_HEADERS})
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})